--- a/index.css
+++ b/index.css
@@ -3,12 +3,14 @@
     margin: 0;
     padding: 0;
 }
+/*background image */
 #banner{
     background-size: cover;
     background-position: center;
     height: 100vh;
     animation: animate 10s ease-in-out infinite;
 }
+/*animating different images for background*/
 @keyframes animate{
     0%,100%{
         background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.5)), url('bg.png');
@@ -23,28 +25,34 @@
         background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.9)),url('bg4.jpg');
     }
 }
+/*icon as image*/
 .icon{
     width:140px;
     position: absolute;
     top: 4%;
     left: 5%;
 }
+/*heading part*/
 .banner-text{
     text-align: center;
     color: #fff;
     padding-top: 200px;
 }
+/*main heading*/
 .banner-text h1{
     font-size: 90px;
     font-family: monospace;
 }
+/*main paragraph*/
 .banner-text p{
     font-size: 20px;
     font-style: italic;
 }
+/*explore button*/
 .banner-btn{
     margin: 70px auto 0;
 }
+/*explore transition*/
 .banner-btn a{
     width: 150px;
     text-decoration: none;
@@ -58,6 +66,7 @@
     z-index: 1;
     transition: color 0.5s;
 }
+/*span for explore*/
 .banner-btn a span{
     width: 0;
     height: 100%;
@@ -68,12 +77,15 @@
     z-index: -1;
     transition: 0.5s;
 }
+/*span hover*/
 .banner-btn a:hover span{
     width: 100%;
 }
+/*hover color*/
 .banner-btn a:hover{
     color: #000;
 }
+/*menu bar*/
 #sideNav{
     width: 250px;
     height: 100vh;
@@ -93,6 +105,7 @@ nav ul li a{
     color: #fff;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
 }
+/*menu button position*/
 #menuBtn{
     width: 40px;
     height: 40px;
@@ -105,6 +118,7 @@ nav ul li a{
     cursor: pointer;
     background: #1f6760;
 }
+/*menu bar image*/
 #menuBtn img{
     margin-top: 12px;
 }
@@ -112,6 +126,7 @@ nav ul li a{
     width: 25px;
     height: 20px;
 }
+/*media query for iphone 4*/
 @media screen and (max-width: 320px){
     #banner{
         width: 100%;
@@ -120,11 +135,13 @@ nav ul li a{
         width: 100px;
     }
 }
+/*media query for iphone x*/
 @media screen and (min-width:375px) and (max-width:812px){
     #banner{
         width: 100%;
     }
 }
+/*media query for iphone 4*/
 @media screen and (max-width:480px){
     .banner-text h1{
         font-size: 60px;
@@ -135,11 +152,13 @@ nav ul li a{
         margin: 20px auto;
     }
 }
+/*media query for google pixel*/
 @media screen and (min-width:411px) and (max-width:731px){
     #banner{
         height: 90vh;
     }
 }
+/*media query*/
 @media screen and (min-width:481px) and (max-width:800px){
     .banner-text h1{
         font-size: 70px;
@@ -150,6 +169,7 @@ nav ul li a{
         margin: 20px auto;
     }
 }
+/*media query*/
 @media screen and (min-width: 801px) and (max-width: 1024px){
     .banner-text h1{
         font-size: 70px;
@@ -160,6 +180,7 @@ nav ul li a{
         margin: 20px auto;
     }
 }
+/*media wquery for iPad*/
 @media screen and (min-width:768px) and (max-width:1024px){
     #banner{
         height: 60vh;
@@ -167,12 +188,12 @@ nav ul li a{
 }
 
 /*event*/
-
 #event{
     width: 100%;
     padding: 70px 0;
 
 }
+/*heading*/
 .title-text{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 2rem;
@@ -229,6 +250,7 @@ nav ul li a{
 .events p{
     font-size: x-large;
 }
+/*media query for iPhonr 4*/
 @media screen and (max-width: 320px){
     #banner{
         width: 100%;
@@ -247,12 +269,14 @@ nav ul li a{
         text-align: center;
     }
 }
+/*media query for iPhone x*/
 @media screen and (min-width:375px) and (max-width:812px){
     .box{
         width: 70%;
         margin-left: 20px;
     }
 }
+/*media query*/
 @media  screen and (max-width:480px){
     .title-text h1{
         font-size: 30px;
@@ -271,6 +295,7 @@ nav ul li a{
         border-bottom: 2px solid rgb(57, 31, 31);
     }
 }
+/*media query*/
 @media screen and (min-width:481px) and (max-width:800px){
     .title-text h1{
         font-size: 50px;
@@ -286,6 +311,7 @@ nav ul li a{
         width: 100%;
     }
 }
+/*media query*/
 @media screen and (min-width: 801px) and (max-width: 1024px){
     .title-text h1{
         font-size: 70px;
@@ -301,12 +327,13 @@ nav ul li a{
         width: 90%;
     }
 }
+/*media query for iPad*/
 @media screen and (min-width:768px) and (max-width:1024px){
     .box{
         width: 85%;
     }
 }
-
+/*around the world*/
 #ar{
     width: 100%;
     padding: 50px 0;
@@ -368,6 +395,7 @@ hr{
     bottom: 40%; 
     opacity: 1;
 }
+/*media query for iPhone 4*/
 @media screen and (max-width:480px){
     .single-ar{
         flex-basis: 100%;
@@ -384,6 +412,7 @@ hr{
         opacity: 1;
     }
 }
+/*media query*/
 @media screen and (min-width:481px) and (max-width:800px){
     .single-ar{
         flex-basis: 70%;
@@ -400,6 +429,7 @@ hr{
         opacity: 1;
     }
 }
+/*media query*/
 @media screen and (min-width: 801px) and (max-width: 1024px){
     .single-ar{
         flex-basis: 40%;
@@ -546,6 +576,7 @@ footer img{
     margin-right: 3px;
     margin-bottom: 5px;
 }
+/*media query for iPhone 4*/
 @media screen and (max-width: 480px){
     .footer-dist{
         font: bold 10px sans-serif;
@@ -562,6 +593,7 @@ footer img{
         margin-left: 0;
       }
 }
+/*media query */
 @media screen and (min-width:481px) and (max-width:800px){
     .footer-dist{
         font: bold 10px sans-serif;
