--- a/about.css
+++ b/about.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
 }
+/*background image*/
 #banner{
     background-image:url('bg.png');
     opacity: 1.0;
@@ -10,6 +11,7 @@
     height: 40vh;
     animation: animate 13s ease-in-out infinite;
 }
+/*animation of different background images*/
 @keyframes animate{
     0%,100%{
         background-image: url('bg.png');
@@ -80,6 +82,7 @@ nav ul li a{
     width: 25px;
     height: 20px;
 }
+/*slider page*/
 .title{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 2.9rem;
@@ -89,9 +92,6 @@ nav ul li a{
     text-transform: uppercase;
     text-align: center;
 }
-.underline {
-    border-bottom: 2px solid red;
-  }
 .title p{
     color: black;
     margin-left: 15%;
@@ -168,6 +168,7 @@ button{
     width: 30px;
     height: 30px;
 }
+/*media query for iPhone 4*/
 @media screen and (max-width: 320px){
     #banner{
         width: 130%;
@@ -176,6 +177,7 @@ button{
         width: 100px;
     }
 }
+/*media query*/
 @media screen and (max-width:480px){
     body{
         width: 100%;
@@ -201,6 +203,7 @@ button{
         width: 110px;
     }
 }
+/*media query*/
 @media screen and (min-width:481px) and (max-width:800px){
     body{
         width: 100%;
@@ -229,6 +232,7 @@ button{
         width: 110px;
     }
 }
+/*media query*/
 @media screen and (min-width: 801px) and (max-width: 1024px){
     body{
         width: 100%;
@@ -255,9 +259,8 @@ button{
         width: 80%;
     }
 }
-
+/*end of slider page*/
 /*Different galleries*/
-
 .gallery{
     width: 80%;
     margin: auto;
@@ -318,12 +321,14 @@ button{
     bottom: 49%;
     opacity: 1;
 }
+/*media query for iPhone 4*/
 @media screen and (max-width: 320px){
     .gallery{
         width: 120%;
         margin-left: 15px;
     }
 }
+/*media query*/
 @media screen and (max-width:480px){
     .row{
         flex-direction: column;
@@ -338,17 +343,19 @@ button{
         width: 70%;
     }
 }
+/*media query*/
 @media screen and (min-width:481px) and (max-width:800px){
     .row{
         flex-direction: column;
     }
 }
+/*media query*/
 @media screen and (min-width: 801px) and (max-width: 1024px){
     .gallery-col img{
         width: 150%;
     }
 }
-
+/*end of different gallery*/
 /*artists*/
 #art{
     width: 100%;
@@ -399,12 +406,14 @@ button{
 .art-col:hover{
     transform: translateY(-7px);
 }
+/*media query for iPhone 4*/
 @media screen and (max-width:320px){
     #art{
         width: 110%;
         margin-left: 20px;
     }
 }
+/*media query*/
 @media screen and (max-width:480px){
     .art-col img{
         width: 100%;
@@ -413,6 +422,7 @@ button{
         flex-basis: 100%;
     }
 }
+/*media query*/
 @media screen and (min-width:481px) and (max-width:800px){
     .art-col img{
         width: 90%;
@@ -421,9 +431,8 @@ button{
         flex-basis: 30%;
     }
 }
-
+/*end of aritsts*/
 /*FOOTER*/
-
 .footer-dist{
     background: #666;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
@@ -553,11 +562,13 @@ footer img{
     margin-right: 3px;
     margin-bottom: 5px;
 }
+/*media query for iPhone 4*/
 @media screen and (max-width:320px){
     .footer-dist{
         width: 130%;
     }
 }
+/*media query*/
 @media screen and (max-width: 480px){
     .footer-dist{
         font: bold 10px sans-serif;
@@ -574,9 +585,10 @@ footer img{
         margin-left: 0;
       }
 }
+/*media query*/
 @media screen and (min-width:481px) and (max-width:800px){
     .footer-dist{
         font: bold 10px sans-serif;
     }
 }
-  
+/*end of footer*/
