--- a/exhibit.css
+++ b/exhibit.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
 }
+/*background image*/
 #banner{
     opacity: 1.0;
     background-size: cover;
@@ -9,6 +10,7 @@
     height: 40vh;
     animation: animate 13s ease-in-out infinite;
 }
+/*animate different images for background*/
 @keyframes animate{
     0%,100%{
         background-image: url('bg.png');
@@ -23,6 +25,7 @@
         background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.9)),url('bg4.jpg');
     }
 }
+/*icon*/
 .icon{
     width: 140px;
     position: absolute;
@@ -78,6 +81,7 @@ nav ul li a{
     width: 25px;
     height: 20px;
 }
+/*full image*/
 .title-text{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 3.5rem;
@@ -129,6 +133,7 @@ nav ul li a{
     cursor: pointer;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
+/*end of full image*/
 /*exhibits*/
 .title-text p{
     color: black;
@@ -194,6 +199,7 @@ nav ul li a{
 .exhibit-col:hover{
     transform: translateY(-7px);
 }
+/*media query for iPhone 4*/
 @media screen and (max-width: 320px){
     #banner{
         min-width: 120%;
@@ -210,11 +216,13 @@ nav ul li a{
         margin-left: 20px;
     }
 }
+/*media query for iPhone X*/
 @media screen and (min-width:375px) and (max-width:812px){
     #banner{
         width: 105%;
     }
 }
+/*media query*/
 @media screen and (max-width:480px){
     #banner{
         width: 100%;
@@ -229,6 +237,7 @@ nav ul li a{
         width: 120px;
     }
 }
+/*media query*/
 @media screen and (min-width:481px) and (max-width:800px){
     .exhibit-col{
         flex-basis: 100%;
@@ -240,6 +249,7 @@ nav ul li a{
         font-size: 50px;    
     }
 }
+/*media query*/
 @media screen and (min-width: 801px) and (max-width: 1024px){
     .exhibit-col{
         flex-basis: 100%;
@@ -251,7 +261,7 @@ nav ul li a{
         font-size: 60px;
     }
 }
-
+/*end of exhibits*/
 /*expanding*/
 .sec .title{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -317,6 +327,7 @@ nav ul li a{
     opacity: 1;
     bottom: 25px;
 }
+/*media query for iPhone 4*/
 @media screen and (max-width:320px){
     .gallery{
         width: 120%;
@@ -335,6 +346,7 @@ nav ul li a{
         margin-left: 30px;
     }
 }
+/*media query*/
 @media screen and (max-width: 480px){
     #banner{
         width: 105%;
@@ -357,6 +369,7 @@ nav ul li a{
         width: 200px;
     }
 }
+/*media query*/
 @media screen and (min-width:481px) and (max-width:800px){
     .title-text{
         width: 100%;
@@ -368,6 +381,7 @@ nav ul li a{
         height: 120vh;
     }
 }
+/*media query*/
 @media screen and (min-width:801px) and (max-width:1024px) {
     .title-text{
         width: 100%;
@@ -378,6 +392,7 @@ nav ul li a{
         font-size: 40px;
     }
 }
+/*end of expanding*/
 /*sale*/
 .sec1{
    font-family: 'Nunito', sans-serif;
@@ -500,6 +515,7 @@ nav ul li a{
     transform: rotate(180degree);
     color: gold;
 }
+/*end of sale*/
 @media screen and (max-width: 320px){
     .container-1{
         width: 80%;
@@ -519,9 +535,9 @@ nav ul li a{
         font-size: 1rem;
     }
 }
+/*end of sale*/
 
 /*FOOTER*/
-
 .footer-dist{
     background: #666;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
@@ -651,16 +667,19 @@ footer img{
     margin-right: 3px;
     margin-bottom: 5px;
 }
+/*media query for iPhone 4*/
 @media screen and (max-width:320px){
     .footer-dist{
         width: 120%;
     }
 }
+/*media query*/
 @media screen and (min-width:375px) and (max-width:812px){
     .footer-dist{
         width: 105%;
     }
 }
+/*media query*/
 @media screen and (max-width: 480px){
     .footer-dist{
         font: bold 10px sans-serif;
@@ -677,11 +696,13 @@ footer img{
         margin-left: 0;
       }
 }
+/*media query*/
 @media screen and (min-width:481px) and (max-width:800px){
     .footer-dist{
         font: bold 10px sans-serif;
     }
 }
+/*end of footer*/
   
 
     
