--- a/index.css
+++ b/index.css
@@ -96,10 +96,12 @@
     z-index: 2;
     transition: 0.5s;
 }
+/*style for nav bar's unodered list*/
 nav ul li{
     list-style: none;
     margin: 50px 20px;
 }
+/*style for nav bar's unodered list and links*/
 nav ul li a{
     text-decoration: none;
     color: #fff;
@@ -193,7 +195,7 @@ nav ul li a{
     padding: 70px 0;
 
 }
-/*heading*/
+/* Styles for title text elements:*/
 .title-text{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 2rem;
@@ -202,11 +204,13 @@ nav ul li a{
     text-transform: uppercase;
     text-align: center;
 }
+/* Styles for image links:*/
 .image{
     text-decoration: none;
     color: rgb(19, 2, 2);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+/* Styles for the main events container:*/
 .box{
     width: 80%;
     margin: auto;
@@ -218,35 +222,42 @@ nav ul li a{
     padding: 40px;
     border-radius: 10px;
 }
+/* Styles for individual event sections:*/
 .events{
     flex-basis: 50%;
 }
+/* Styles for event image containers:*/
 .events-img{
     width: 100px;
     flex-basis: 50%;
     margin: auto;
 }
+/* Styles for event images:*/
 .events-img img{
     width: 70%;
     border-radius: 10px;
     transition: 0.3s;
     border-top: 10px solid white;
 }
+/* Hover effect on images */
 .events-img img:hover{
     box-shadow: 15px 15px 15px rgba(0,0,0,0.5);
 }
+/* Styles for event titles*/
 .events h1{
     text-align: left;
     margin-bottom: 10px;
     font-weight: 90;
     color: #222;
 }
+/* Styles for additional event information*/
 .event-A{
     margin-left: 10px;
     margin-bottom: 40px;
     text-align: left;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+/* Styles for event descriptions:*/
 .events p{
     font-size: x-large;
 }
@@ -339,6 +350,7 @@ nav ul li a{
     padding: 50px 0;
     background: #efefef;
 }
+/* Styles for the articles container*/
 .ar-box{
     width: 80%;
     display: flex;
@@ -346,6 +358,7 @@ nav ul li a{
     justify-content: space-around;
     margin: auto;
 }
+/* Styles for individual article sections*/
 .single-ar{
     flex-basis: 48%;
     text-align: center;
@@ -354,10 +367,12 @@ nav ul li a{
     color: #fff;
     position: relative;
 }
+/* Styles for article images*/
 .single-ar img{
     width: 100%;
     border-radius: 7px;
 }
+/* Styles for article overlays*/
 .overlay{
     width: 100%;
     height: 100%;
@@ -369,9 +384,11 @@ nav ul li a{
     opacity: 0;
     transition: 1s;
 }
+/* Hover effect on article containers */
 .single-ar:hover .overlay{
      opacity: 2;
 }
+/* Styles for article descriptions*/
 .ar-desc{
     width: 80%;
     position: absolute;
@@ -381,6 +398,7 @@ nav ul li a{
     transform: translateX(-50%);
     transition: 1s;
 }
+/* Styles for horizontal rules (separators)*/
 hr{
     background: #000;
     height: 2px;
@@ -388,9 +406,11 @@ hr{
     margin: 15px auto;
     width: 60%;
 }
+/* Styles for paragraphs within article descriptions*/
 .ar-desc p{
     font-size: 20px;
 }
+/* Hover effect on article descriptions (additional adjustment)*/
 .single-ar:hover .ar-desc{
     bottom: 40%; 
     opacity: 1;
@@ -447,6 +467,7 @@ hr{
     }
 }
 /*footer*/
+/* Styles for the main footer container*/
 .footer-dist{
     background: #666;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
@@ -456,26 +477,32 @@ hr{
     font: bold 16px sans-serif;
     padding: 55px 50px;
 }
+/* Styles for footer sections (left, center, right)*/
 .footer-dist .footer-left,
 .footer-dist .footer-center,
 .footer-dist .footer-right{
   display: inline-block;
   vertical-align: top;
 }
+/* Styles for the left footer section*/
 .footer-dist .footer-left{
     width: 40%;
 }
+/* Styles for footer images*/
 footer img{
     width: 140px;
 }
+ /* Specific color for footer images */
 .footer-dist img{
     color:  lightseagreen;
 }
+/* Styles for footer links*/
 .footer-dist .footer-links{
     color:  #ffffff;
     margin: 20px 0 12px;
     padding: 0;
 }
+/* Styles for individual footer links*/
 .footer-dist .footer-links a{
     display:inline-block;
     line-height: 1.8;
@@ -483,16 +510,18 @@ footer img{
     text-decoration: none;
     color:  inherit;
 }
-
+/* Styles for the gallery name in the left footer section*/
 .footer-dist .footer-gallery-name{
     color:  #222;
     font-size: 20px;
     font-weight: normal;
     margin: 0;
 }
+/* Styles for the center footer section*/
 .footer-dist .footer-center{
     width: 35%;
 }
+/* Styles for icons in the center footer section*/
 .footer-dist .footer-center i{
     background-color:  #33383b;
     color: #ffffff;
@@ -505,10 +534,12 @@ footer img{
     margin: 10px 15px;
     vertical-align: middle;
 }  
+/* Specific adjustment for envelope icon*/
 .footer-dist .footer-center i.fa-envelope{
     font-size: 17px;
     line-height: 38px;
 }
+/* Styles for text elements in the center footer section*/
 .footer-dist .footer-center p{
     display: inline-block;
     color: #ffffff;
@@ -516,17 +547,19 @@ footer img{
     vertical-align: middle;
     margin:0;
 }
+/* Styles for span elements within text*/
 .footer-dist .footer-center p span{
     display:block;
     font-weight: normal;
     font-size: 14px;
     line-height: 2;
 }
+/* Styles for links within text elements*/
 .footer-dist .footer-center p a{
     color:  lightseagreen;
     text-decoration: none;;
 }
-
+/* Separator for footer links*/
 .footer-dist .footer-links a:before {
     content: "|";
     font-weight:300;
@@ -536,13 +569,15 @@ footer img{
     display: inline-block;
     padding-right: 5px;
 }
+/* Removes the separator from the first link*/
 .footer-dist .footer-links .link-1:before {
     content: none;
 }
-
+/* Styles for the right footer section*/
 .footer-dist .footer-right{
     width: 20%;
 }
+/* Styles for gallery information in the right footer section*/
 .footer-dist .footer-gallery-about{
     line-height: 20px;
     color:  #92999f;
@@ -550,6 +585,7 @@ footer img{
     font-weight: normal;
     margin: 0;
 }
+/* Styles for the heading within gallery information*/
 .footer-dist .footer-gallery-about span{
     display: block;
     color:  #ffffff;
@@ -557,9 +593,11 @@ footer img{
     font-weight: bold;
     margin-bottom: 20px;
 }
+/* Styles for footer icons*/
 .footer-dist .footer-icons{
     margin-top: 25px;
 }
+/* Styles for individual footer icons*/
 .footer-dist .footer-icons a{
     display: inline-block;
     width: 35px;
